﻿2015-08-18
  !!! version to be uploaded on GitHub !!!
  new data (thanks to Juan I. Larruquert, Instituto de Optica, Madrid, Spain for providing numerical data)
    main/B4C/Larruquert.yml
    main/Ca/Rodriguez-de Marcos.yml
    main/SiC/Larruquert.yml
    main/SrF2/Rodriguez-de Marcos.yml
    main/Sr/Rodriguez-de Marcos.yml
    main/C/Larruquert.yml
  bug fixes
    corrected publication date of main/Ho/Fernandez-Perea.yml data in library.yml (2008->2011)
    main/Tm/Garcia-Cortes.yml renamed to main/Tm/Vidal-Dasilva.yml; Record in library.yml updated accordingly
    removed legacy main/C/Amorphous.yml

2015-07-05
  new data (thanks to Kevin McPeak, ETH Zürich, Switzerland for providing data in yaml format!)
    main/Ag/McPeak.yml
    main/Al/McPeak.yml
    main/Au/McPeak.yml
    main/Cu/McPeak.yml
  new data (thanks to Piers Barnes, Imperial College London, UK, for providing data in yaml format!)
    other/perovskite/CH3NH3PbI3/Leguy.yml
    other/perovskite/CH3NH3PbI3/Leguy-hydrated.yml
  new data
    main/Rh/Coulter-40.yml
    main/Rh/Coulter-300.yml
    main/Rh/Arndt.yml
    main/Rh/Weaver.yml
    main/Sc2O3/Arndt.yml
    organic/C2H6O2 - ethylene glycol/Sani_and_Otanicar.yml
    organic/C3H8O2 - propylene glycol/Otanicar.yml
    other/heat transfer fluids/Therminol VP-1/Otanicar.yml
  other
    library.yml: Improved classification of organic compounds (alcohols -> alcohols, diols and triols)
    library.yml: Amyl alcohol renamed to Pentanol
  
2015-05-24
  new data (thanks to Elisa Sani, National Institute of Optics, Firenze, Italy)
    organic/C2H6O2 - ethylene glycol/Sani.yml
    organic/C2H6O2 - ethylene glycol/Sani1.yml
    organic/C2H6O2 - ethylene glycol/Sani2.yml
  new data (thanks to Mikael Malmström for suggesting and digitizing data)
    main/C/Dore.yml
  new data (thanks to Peter Zeppenfeld, Johannes Kepler University, Linz, Austria for suggesting data)
    main/Au/Olmon-ev.yml
    main/Au/Olmon-sc.yml
    main/Au/Olmon-ts.yml